--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modul 9</title>
+    <title>1-gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./1-gallery.html">Task 1</a></li>
-      <li><a href="./2-form.html">Task 2</a></li>
-    </ul>
+    <ul class="gallery"></ul>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
